tdf#116277 blank frame into which document will load shown too early

normally we want this to be the window that is the parent for any
warning or password dialog. But for these (weird, see also impl_findSlotParam)
frames dispatched with slotid arguments, they are opened before the dialog
which will fill them is launched.

Presumably in sane land the dialog would be dispatched from the menu entry,
then on its create the frame opened with the desired contents.

Change-Id: I1234b648ca1bd7fd2109cb4d3c70d5bfed9ab563